Timer now works correctly

--- a/src/popup.html
+++ b/src/popup.html
@@ -10,12 +10,10 @@
   <body>
     <div class="popup">
       <h1 class="title">Pomodoro timer</h1>
-      <div class="timer">00:00</div>
+      <div id="timer"></div>
       <div class="buttons">
         <button id="start-button">Start</button>
         <button id="stop-button">Stop</button>
-        <button id="pause-button">Pause</button>
-        <button id="resume-button">Resume</button>
       </div>
     </div>
   </body>
